--- a/Deployment/styles.css
+++ b/Deployment/styles.css
@@ -174,8 +174,8 @@ div.content-containers h1 {
 }
 
 div.content-containers #main-content-container {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("/images/ella-don-0oqMvhc1ntw-unsplash.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("/images/ella-don-0oqMvhc1ntw-unsplash.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("/images/stockImage1.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("/images/stockImage1.jpg");
   background-size: cover;
   min-height: 500px;
   width: 100%;
@@ -269,8 +269,8 @@ div.content-containers .games-content-container {
 }
 
 div.content-containers .games-content-container#pc-games-content-container {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mateo-vrbnjak-nCU4yq5xDEQ-unsplash.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mateo-vrbnjak-nCU4yq5xDEQ-unsplash.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/stockImage4.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/stockImage4.jpg");
 }
 
 div.content-containers .games-content-container#pc-games-content-container .pc-entity {
@@ -302,8 +302,8 @@ div.content-containers .games-content-container#console-games-content-container 
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/games-2453777_1920.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/games-2453777_1920.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/stockImage3.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/stockImage3.jpg");
 }
 
 div.content-containers .games-content-container#console-games-content-container img {
