--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -152,7 +152,7 @@ div.content-containers {
 
   #main-content-container {
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-      url("/images/ella-don-0oqMvhc1ntw-unsplash.jpg");
+      url("/images/stockImage1.jpg");
     background-size: cover;
     min-height: 500px;
     width: 100%;
@@ -217,7 +217,7 @@ div.content-containers {
 
     &#pc-games-content-container {
       background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url("/images/mateo-vrbnjak-nCU4yq5xDEQ-unsplash.jpg");
+        url("/images/stockImage4.jpg");
 
       .pc-entity {
         display: flex;
@@ -243,7 +243,7 @@ div.content-containers {
       background-repeat: no-repeat;
       background-size: 100%;
       background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url("/images/games-2453777_1920.jpg");
+        url("/images/stockImage3.jpg");
 
       img {
         max-height: 150px;
